# topgen

./: CMakeLists.txt  README.md
doc/: BiblioDB.bib  user-guide.tex
include/: topgen.hpp
include/topgen/: bgl.hpp  cube.hpp  custom1.hpp  custom2.hpp  custom_hu.hpp  destro.hpp  dfly.hpp  dfly_channel.hpp  dfly_node.hpp  dir_channel.hpp  dir_node.hpp  exception.hpp  fully.hpp  hu_channel.hpp  hu_node.hpp  ia.hpp  kns.hpp  kns_channel.hpp  mesh.hpp  min.hpp  min_channel.hpp  min_node.hpp  my_binary.hpp  pbgl.hpp  psdestro.hpp  rlft.hpp  rlft_channel.hpp  rlft_node.hpp  router.hpp  scp_manager.hpp  topology.hpp  torus.hpp  torusnd.hpp  xgft.hpp  xgft_channel.hpp  xgft_node.hpp
include/topgen/node/: channel_type_node.hpp  element_type_node.hpp  input_adapter_type_node.hpp  route_node.hpp
src/: cube.cpp  custom1.cpp  custom2.cpp  custom_hu.cpp  destro.cpp  dfly.cpp  dfly_channel.cpp  dfly_node.cpp  dir_channel.cpp  dir_node.cpp  exception.cpp  fully.cpp  hu_channel.cpp  hu_node.cpp  ia.cpp  kns.cpp  kns_channel.cpp  mesh.cpp  min.cpp  min_channel.cpp  min_node.cpp  my_binary.cpp  pbgl.cpp  psdestro.cpp  rlft.cpp  rlft_channel.cpp  rlft_node.cpp  router.cpp  scp_manager.cpp  topology.cpp  torus.cpp  torusnd.cpp  xgft.cpp  xgft_channel.cpp  xgft_node.cpp
src/node/: channel_type_node.cpp  element_type_node.cpp  inputa_dapter_type_node.cpp  route_node.cpp
test/: tester.cpp
